[gd_scene load_steps=16 format=2]

[ext_resource path="res://_MyContent/Scenes/RPS_Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://_MyContent/Scripts/RPS.gd" type="Script" id=2]
[ext_resource path="res://_MyContent/Images/Delete_RPS.jpg" type="Texture" id=3]
[ext_resource path="res://_MyContent/Images/Circle.png" type="Texture" id=4]
[ext_resource path="res://_MyContent/Images/Question Mark.png" type="Texture" id=5]
[ext_resource path="res://_MyContent/Images/Paper.png" type="Texture" id=6]
[ext_resource path="res://_MyContent/Images/Circle_Blue.png" type="Texture" id=7]
[ext_resource path="res://_MyContent/Images/Scissors.png" type="Texture" id=8]
[ext_resource path="res://_MyContent/Images/Rock.png" type="Texture" id=9]
[ext_resource path="res://_MyContent/Images/Circle_Red.png" type="Texture" id=10]
[ext_resource path="res://_MyContent/Materials/Grey.tres" type="Material" id=11]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="CubeMesh" id=4]

[node name="Rock_Paper_Scissors" type="Spatial"]
script = ExtResource( 2 )

[node name="DeleteRps" type="Sprite" parent="."]
visible = false
position = Vector2( 644, 365 )
texture = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )

[node name="ColorRect" type="ColorRect" parent="Viewport"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 32.2551, 17.8208 )
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="Enemy_Choice" type="AnimatedSprite" parent="Viewport"]
position = Vector2( 973, 338 )
scale = Vector2( 0.381352, 0.381352 )
frames = SubResource( 3 )
flip_h = true

[node name="Player_Choice" type="AnimatedSprite" parent="Viewport"]
position = Vector2( 315, 338 )
scale = Vector2( 0.360447, 0.360447 )
frames = SubResource( 3 )

[node name="Point_Circles" type="Spatial" parent="Viewport"]

[node name="Final Point" type="AnimatedSprite" parent="Viewport/Point_Circles"]
position = Vector2( 648, 90.75 )
scale = Vector2( 0.838168, 0.838168 )
frames = SubResource( 2 )

[node name="Player Points" type="Spatial" parent="Viewport/Point_Circles"]

[node name="Point" type="AnimatedSprite" parent="Viewport/Point_Circles/Player Points"]
position = Vector2( 202.483, 102.5 )
scale = Vector2( 0.538889, 0.538889 )
frames = SubResource( 2 )

[node name="Point2" type="AnimatedSprite" parent="Viewport/Point_Circles/Player Points"]
position = Vector2( 338.231, 96.75 )
scale = Vector2( 0.619444, 0.619444 )
frames = SubResource( 2 )

[node name="Point3" type="AnimatedSprite" parent="Viewport/Point_Circles/Player Points"]
position = Vector2( 481, 90.75 )
scale = Vector2( 0.686111, 0.686111 )
frames = SubResource( 2 )

[node name="Enemy Points" type="Spatial" parent="Viewport/Point_Circles"]

[node name="Point7" type="AnimatedSprite" parent="Viewport/Point_Circles/Enemy Points"]
position = Vector2( 1083, 102.5 )
scale = Vector2( 0.538889, 0.538889 )
frames = SubResource( 2 )

[node name="Point6" type="AnimatedSprite" parent="Viewport/Point_Circles/Enemy Points"]
position = Vector2( 951, 96.75 )
scale = Vector2( 0.619444, 0.619444 )
frames = SubResource( 2 )

[node name="Point5" type="AnimatedSprite" parent="Viewport/Point_Circles/Enemy Points"]
position = Vector2( 808, 90.75 )
scale = Vector2( 0.686111, 0.686111 )
frames = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1.83624, 0, 0, 0, 1.83624, 0, 0, 0, 0.277508, 0, 18.0449, -10.4291 )
flip_v = true
texture = SubResource( 1 )

[node name="Buttons" type="Spatial" parent="."]

[node name="Button Rock" parent="Buttons" instance=ExtResource( 1 )]
transform = Transform( 2.82843, 0, 2.82843, 0, 4, 0, -2.82843, 0, 2.82843, -10.0544, 6.8326, 1.98624 )
button_type = "Rock"
number = 1
button_mat = "res://_MyContent/Images/Rock.png"

[node name="Button Paper" parent="Buttons" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 6.8326, -1.61158 )
button_type = "Paper"
number = 2
button_mat = "res://_MyContent/Images/Paper.png"

[node name="Button Scissors" parent="Buttons" instance=ExtResource( 1 )]
transform = Transform( 2.82843, 0, -2.82843, 0, 4, 0, 2.82843, 0, 2.82843, 9.9984, 6.8326, 1.97337 )
button_type = "Scissors"
number = 3
button_mat = "res://_MyContent/Images/Scissors.png"

[node name="Match End Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 22.7431, 0, 0, 0, 14.2841, 0, 0, 0, 1, 0, 12.6389, -11.5751 )
mesh = SubResource( 4 )
material/0 = ExtResource( 11 )

[connection signal="timeout" from="Match End Timer" to="." method="_on_Match_End_Timer_timeout"]
